; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_unlink.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_playlist.c_playlist_unlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.playlist = type { i32, %struct.playlist_entry*, %struct.TYPE_2__*, %struct.playlist_entry* }
%struct.TYPE_2__ = type { %struct.playlist_entry* }
%struct.playlist_entry = type { %struct.playlist*, %struct.TYPE_2__*, %struct.playlist_entry* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.playlist*, %struct.playlist_entry*)* @playlist_unlink to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @playlist_unlink(%struct.playlist* %0, %struct.playlist_entry* %1) #0 {
  %3 = alloca %struct.playlist*, align 8
  %4 = alloca %struct.playlist_entry*, align 8
  store %struct.playlist* %0, %struct.playlist** %3, align 8
  store %struct.playlist_entry* %1, %struct.playlist_entry** %4, align 8
  %5 = load %struct.playlist*, %struct.playlist** %3, align 8
  %6 = icmp ne %struct.playlist* %5, null
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %9 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %8, i32 0, i32 0
  %10 = load %struct.playlist*, %struct.playlist** %9, align 8
  %11 = load %struct.playlist*, %struct.playlist** %3, align 8
  %12 = icmp eq %struct.playlist* %10, %11
  br label %13

13:                                               ; preds = %7, %2
  %14 = phi i1 [ false, %2 ], [ %12, %7 ]
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load %struct.playlist*, %struct.playlist** %3, align 8
  %18 = getelementptr inbounds %struct.playlist, %struct.playlist* %17, i32 0, i32 3
  %19 = load %struct.playlist_entry*, %struct.playlist_entry** %18, align 8
  %20 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %21 = icmp eq %struct.playlist_entry* %19, %20
  br i1 %21, label %22, label %30

22:                                               ; preds = %13
  %23 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %24 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %23, i32 0, i32 2
  %25 = load %struct.playlist_entry*, %struct.playlist_entry** %24, align 8
  %26 = load %struct.playlist*, %struct.playlist** %3, align 8
  %27 = getelementptr inbounds %struct.playlist, %struct.playlist* %26, i32 0, i32 3
  store %struct.playlist_entry* %25, %struct.playlist_entry** %27, align 8
  %28 = load %struct.playlist*, %struct.playlist** %3, align 8
  %29 = getelementptr inbounds %struct.playlist, %struct.playlist* %28, i32 0, i32 0
  store i32 1, i32* %29, align 8
  br label %30

30:                                               ; preds = %22, %13
  %31 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %32 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %31, i32 0, i32 2
  %33 = load %struct.playlist_entry*, %struct.playlist_entry** %32, align 8
  %34 = icmp ne %struct.playlist_entry* %33, null
  br i1 %34, label %35, label %43

35:                                               ; preds = %30
  %36 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %37 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %36, i32 0, i32 1
  %38 = load %struct.TYPE_2__*, %struct.TYPE_2__** %37, align 8
  %39 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %40 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %39, i32 0, i32 2
  %41 = load %struct.playlist_entry*, %struct.playlist_entry** %40, align 8
  %42 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %41, i32 0, i32 1
  store %struct.TYPE_2__* %38, %struct.TYPE_2__** %42, align 8
  br label %49

43:                                               ; preds = %30
  %44 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %45 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %44, i32 0, i32 1
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %45, align 8
  %47 = load %struct.playlist*, %struct.playlist** %3, align 8
  %48 = getelementptr inbounds %struct.playlist, %struct.playlist* %47, i32 0, i32 2
  store %struct.TYPE_2__* %46, %struct.TYPE_2__** %48, align 8
  br label %49

49:                                               ; preds = %43, %35
  %50 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %51 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %50, i32 0, i32 1
  %52 = load %struct.TYPE_2__*, %struct.TYPE_2__** %51, align 8
  %53 = icmp ne %struct.TYPE_2__* %52, null
  br i1 %53, label %54, label %62

54:                                               ; preds = %49
  %55 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %56 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %55, i32 0, i32 2
  %57 = load %struct.playlist_entry*, %struct.playlist_entry** %56, align 8
  %58 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %59 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %58, i32 0, i32 1
  %60 = load %struct.TYPE_2__*, %struct.TYPE_2__** %59, align 8
  %61 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %60, i32 0, i32 0
  store %struct.playlist_entry* %57, %struct.playlist_entry** %61, align 8
  br label %68

62:                                               ; preds = %49
  %63 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %64 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %63, i32 0, i32 2
  %65 = load %struct.playlist_entry*, %struct.playlist_entry** %64, align 8
  %66 = load %struct.playlist*, %struct.playlist** %3, align 8
  %67 = getelementptr inbounds %struct.playlist, %struct.playlist* %66, i32 0, i32 1
  store %struct.playlist_entry* %65, %struct.playlist_entry** %67, align 8
  br label %68

68:                                               ; preds = %62, %54
  %69 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %70 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %69, i32 0, i32 1
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %70, align 8
  %71 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %72 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %71, i32 0, i32 2
  store %struct.playlist_entry* null, %struct.playlist_entry** %72, align 8
  %73 = load %struct.playlist_entry*, %struct.playlist_entry** %4, align 8
  %74 = getelementptr inbounds %struct.playlist_entry, %struct.playlist_entry* %73, i32 0, i32 0
  store %struct.playlist* null, %struct.playlist** %74, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
